<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- ================================================== -->
  <!-- Package metadata -->
  <!-- ================================================== -->
  <name>matrobot_simulation</name>
  <version>0.1.0</version>

  <description>
    ROS 2 integration package for the Matrobot mobile robot using Gazebo-based
    simulation. This package provides communication bridges between Gazebo and
    ROS 2, including sensor data forwarding and wheel-based odometry.
  </description>

  <maintainer email="beyazlimelike@gmail.com">Melike Beyazlı</maintainer>
  <author email="beyazlimelike@gmail.com">Melike Beyazlı</author>
  <license>Apache-2.0</license>

  <!-- ================================================== -->
  <!-- Build system -->
  <!-- ================================================== -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ================================================== -->
  <!-- Runtime dependencies -->
  <!-- ================================================== -->
  <depend>rclpy</depend>

  <!-- Message / interface dependencies -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- ================================================== -->
  <!-- Export -->
  <!-- ================================================== -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

