<?xml version="1.0"?>
<package format="3">

  <name>matrobot_slam</name>
  <version>0.0.1</version>

  <description>
    SLAM launch configurations and visualization tools for the Matrobot Mobile Robot.
    This package is responsible for online map generation using slam_toolbox.
  </description>

  <maintainer email="beyazlimelike@gmail.com">Melike Beyazlı</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- SLAM -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Messages (used by SLAM and RViz) -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

